Retornei a cor do Hover do botao

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
     --botao-azul: #167BF7;
     --cor-de-fundo: #00030C;
     --fonte-principal: 'Inter';
-    --botao-efeito: #8a0000;
+    --botao-efeito: #73abf0;
 }
 
 /* 1nd Section */
