--- a/styles.css
+++ b/styles.css
@@ -213,3 +213,47 @@ body {
     transition: 200ms;
     transform: scale(1.5);
 }
+
+/* responsividade */
+
+@media screen and (max-width: 768px) {
+    .container{
+        display: block;
+        background-image: none;
+    }
+    .container__imagem {
+        width: 50vw;
+    }
+    .container__caixa {
+        margin: 2em 2em;
+    }
+    .secundario {
+        margin: 0;
+        text-align: center;
+    }
+    .secundario__imagem {
+        width: 50vw;
+    }
+
+    .dispositivos {
+        margin: 0 2em;
+    }
+
+    .dispositivos__lista {
+        display: block;
+    }
+
+    .rodape {
+        margin: 0;
+        padding: 0;
+    }
+
+    .rodape__lista {
+        display: block;   
+    }
+
+    .rodape__texto {
+        padding: 0;
+    }
+
+}
